resolved some problems